add schema generation and add jwt security schema
